project-api/project-api-test/bin/test/compiler_plugin_tests/negative_cases/package_that_imports_plugin_4/main.bal
import samjs/package_compiler_plugin_4 as _;

public function main() {
}
